# scdoc_py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
scdoc_py/: __init__.py
src/: SCDoc.py.cpp
