[build-system]
requires = [
    "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "scdoc_py"
version = "0.1.0"
description = "A Python wrapper for parsing SCDoc files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dennis Scheiba", email = "git@dennis-scheiba.com" }]
dependencies = []

[tool.scikit-build]
minimum-version = "0.5"
sdist.include = ["scdoc_py/"]
